--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -23,10 +23,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from commodities import hard,hard_tech,hard_pct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from trading import *\n",
+    "scaler=MinMaxScaler(feature_range=(-1,1))\n",
+    "df=hard_pct.join(hard_tech)['1993-01-02':]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multivariate_data(dataset, target, start_index, end_index, history_size,\n",
+    "                      target_size, step, single_step=False):\n",
+    "  data = []\n",
+    "  labels = []\n",
+    "\n",
+    "  start_index = start_index + history_size\n",
+    "  if end_index is None:\n",
+    "    end_index = len(dataset) - target_size\n",
+    "\n",
+    "  for i in range(start_index, end_index):\n",
+    "    indices = range(i-history_size, i, step)\n",
+    "    data.append(dataset[indices])\n",
+    "\n",
+    "    if single_step:\n",
+    "      labels.append(target[i+target_size])\n",
+    "    else:\n",
+    "      labels.append(target[i:i+target_size])\n",
+    "\n",
+    "  return np.array(data), np.array(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "made model for pct_gold\n",
+      "made model for pct_oil\n",
+      "made model for pct_silver\n",
+      "made model for pct_ruth\n",
+      "made model for pct_irid\n",
+      "made model for pct_pall\n",
+      "made model for pct_rhod\n",
+      "made model for pct_plat\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=df.to_numpy()\n",
+    "scaler.fit(data)\n",
+    "data=scaler.transform(data)\n",
+    "models={}\n",
+    "for asset in hard_pct.columns:\n",
+    "    target=df['pct_gold'].to_numpy().reshape(-1,1)\n",
+    "    scaler.fit(target)\n",
+    "    target=scaler.transform(target)\n",
+    "    x,y=multivariate_data(data,target,0,None,32,1,1)\n",
+    "    train_x=x[:5279]\n",
+    "    train_y=y[:5279].reshape(-1,1)\n",
+    "    model=Sequential([\n",
+    "        LSTM(24),\n",
+    "        Dense(1)\n",
+    "    ])\n",
+    "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "    epochs=10\n",
+    "    model.fit(train_x,train_y.reshape(-1,1),batch_size=32,verbose=0,epochs=epochs)\n",
+    "    print('made model for {}'.format(asset))\n",
+    "    models[asset]=model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#len(x[5279:]),len(df['pct_plat'].iloc[5279:-32]),len(df[:start])\n",
+    "#models['pct_plat'].predict(x[5279:]),df['pct_plat'][start:]\n",
+    "trading=pd.DataFrame()\n",
+    "for asset,v in models.items():\n",
+    "    predictions=models[asset].predict(x[5279:])\n",
+    "    prices=df[asset].iloc[5279:-32]\n",
+    "    signals=pd.Series([0 for _ in range(len(prices))],index=prices.index)\n",
+    "    for b in range(len(prices)-1):\n",
+    "        if predictions[b]>0:\n",
+    "            signals.iloc[b+1]=1\n",
+    "        else:\n",
+    "            signals.iloc[b+1]=-1\n",
+    "    trading[asset]=eval_signals(prices,signals)\n",
+    "    #print(asset,eval_signals(prices,signals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gold</th>\n",
+       "      <th>oil</th>\n",
+       "      <th>silver</th>\n",
+       "      <th>ruth</th>\n",
+       "      <th>irid</th>\n",
+       "      <th>pall</th>\n",
+       "      <th>rhod</th>\n",
+       "      <th>plat</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>0.994762</td>\n",
+       "      <td>1.050645</td>\n",
+       "      <td>0.991803</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.997487</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.988294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>0.983162</td>\n",
+       "      <td>1.094098</td>\n",
+       "      <td>0.976607</td>\n",
+       "      <td>1.034483</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.993737</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.983394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>0.975623</td>\n",
+       "      <td>1.077908</td>\n",
+       "      <td>0.961568</td>\n",
+       "      <td>1.034483</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.996219</td>\n",
+       "      <td>1.020080</td>\n",
+       "      <td>0.979350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-08</th>\n",
+       "      <td>0.979491</td>\n",
+       "      <td>1.075473</td>\n",
+       "      <td>0.959527</td>\n",
+       "      <td>1.034483</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.002453</td>\n",
+       "      <td>1.028442</td>\n",
+       "      <td>0.976142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-05</th>\n",
+       "      <td>0.675939</td>\n",
+       "      <td>0.542037</td>\n",
+       "      <td>0.749167</td>\n",
+       "      <td>0.199136</td>\n",
+       "      <td>0.346332</td>\n",
+       "      <td>0.224059</td>\n",
+       "      <td>0.078555</td>\n",
+       "      <td>1.114204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-06</th>\n",
+       "      <td>0.661393</td>\n",
+       "      <td>0.598248</td>\n",
+       "      <td>0.741112</td>\n",
+       "      <td>0.199136</td>\n",
+       "      <td>0.346332</td>\n",
+       "      <td>0.216704</td>\n",
+       "      <td>0.072116</td>\n",
+       "      <td>1.070710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-09</th>\n",
+       "      <td>0.656210</td>\n",
+       "      <td>0.744974</td>\n",
+       "      <td>0.752832</td>\n",
+       "      <td>0.199136</td>\n",
+       "      <td>0.346332</td>\n",
+       "      <td>0.224011</td>\n",
+       "      <td>0.069930</td>\n",
+       "      <td>1.105021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-10</th>\n",
+       "      <td>0.665413</td>\n",
+       "      <td>0.662919</td>\n",
+       "      <td>0.755911</td>\n",
+       "      <td>0.199136</td>\n",
+       "      <td>0.346332</td>\n",
+       "      <td>0.225628</td>\n",
+       "      <td>0.068902</td>\n",
+       "      <td>1.110066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-11</th>\n",
+       "      <td>0.666997</td>\n",
+       "      <td>0.688690</td>\n",
+       "      <td>0.756354</td>\n",
+       "      <td>0.199136</td>\n",
+       "      <td>0.346332</td>\n",
+       "      <td>0.233377</td>\n",
+       "      <td>0.068902</td>\n",
+       "      <td>1.110066</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1227 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                gold       oil    silver      ruth      irid      pall  \\\n",
+       "Date                                                                     \n",
+       "2015-01-02  1.000000  1.000000  1.000000  1.000000  1.000000  1.000000   \n",
+       "2015-01-05  0.994762  1.050645  0.991803  1.000000  1.000000  0.997487   \n",
+       "2015-01-06  0.983162  1.094098  0.976607  1.034483  1.000000  0.993737   \n",
+       "2015-01-07  0.975623  1.077908  0.961568  1.034483  1.000000  0.996219   \n",
+       "2015-01-08  0.979491  1.075473  0.959527  1.034483  1.000000  1.002453   \n",
+       "...              ...       ...       ...       ...       ...       ...   \n",
+       "2020-03-05  0.675939  0.542037  0.749167  0.199136  0.346332  0.224059   \n",
+       "2020-03-06  0.661393  0.598248  0.741112  0.199136  0.346332  0.216704   \n",
+       "2020-03-09  0.656210  0.744974  0.752832  0.199136  0.346332  0.224011   \n",
+       "2020-03-10  0.665413  0.662919  0.755911  0.199136  0.346332  0.225628   \n",
+       "2020-03-11  0.666997  0.688690  0.756354  0.199136  0.346332  0.233377   \n",
+       "\n",
+       "                rhod      plat  \n",
+       "Date                            \n",
+       "2015-01-02  1.000000  1.000000  \n",
+       "2015-01-05  1.000000  0.988294  \n",
+       "2015-01-06  1.000000  0.983394  \n",
+       "2015-01-07  1.020080  0.979350  \n",
+       "2015-01-08  1.028442  0.976142  \n",
+       "...              ...       ...  \n",
+       "2020-03-05  0.078555  1.114204  \n",
+       "2020-03-06  0.072116  1.070710  \n",
+       "2020-03-09  0.069930  1.105021  \n",
+       "2020-03-10  0.068902  1.110066  \n",
+       "2020-03-11  0.068902  1.110066  \n",
+       "\n",
+       "[1227 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def col_map(x):\n",
+    "    return(x[x.find('_')+1:])\n",
+    "trading=trading.rename(columns=col_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trading.to_csv('lstm_results.csv',index=True)"
+   ]
   }
  ],
  "metadata": {
@@ -45,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
